# backend/Api_Gateway/api/gen/v1/ApiService.pb.go
@@ -22,6 +22,86 @@ const (
 	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
 )
 
+type SetPriorityChannelsRequest struct {
+	state            protoimpl.MessageState `protogen:"open.v1"`
+	PriorityChannels []string               `protobuf:"bytes,1,rep,name=priority_channels,json=priorityChannels,proto3" json:"priority_channels,omitempty"`
+	unknownFields    protoimpl.UnknownFields
+	sizeCache        protoimpl.SizeCache
+}
+
+func (x *SetPriorityChannelsRequest) Reset() {
+	*x = SetPriorityChannelsRequest{}
+	mi := &file_v1_ApiService_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *SetPriorityChannelsRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*SetPriorityChannelsRequest) ProtoMessage() {}
+
+func (x *SetPriorityChannelsRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_v1_ApiService_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use SetPriorityChannelsRequest.ProtoReflect.Descriptor instead.
+func (*SetPriorityChannelsRequest) Descriptor() ([]byte, []int) {
+	return file_v1_ApiService_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *SetPriorityChannelsRequest) GetPriorityChannels() []string {
+	if x != nil {
+		return x.PriorityChannels
+	}
+	return nil
+}
+
+type SetPriorityChannelsResponse struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *SetPriorityChannelsResponse) Reset() {
+	*x = SetPriorityChannelsResponse{}
+	mi := &file_v1_ApiService_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *SetPriorityChannelsResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*SetPriorityChannelsResponse) ProtoMessage() {}
+
+func (x *SetPriorityChannelsResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_v1_ApiService_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use SetPriorityChannelsResponse.ProtoReflect.Descriptor instead.
+func (*SetPriorityChannelsResponse) Descriptor() ([]byte, []int) {
+	return file_v1_ApiService_proto_rawDescGZIP(), []int{1}
+}
+
 type LoginRequest struct {
 	state         protoimpl.MessageState `protogen:"open.v1"`
 	TelegramId    int64                  `protobuf:"varint,1,opt,name=telegram_id,json=telegramId,proto3" json:"telegram_id,omitempty"`
@@ -36,7 +116,7 @@ type LoginRequest struct {
 
 func (x *LoginRequest) Reset() {
 	*x = LoginRequest{}
-	mi := &file_v1_ApiService_proto_msgTypes[0]
+	mi := &file_v1_ApiService_proto_msgTypes[2]
 	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 	ms.StoreMessageInfo(mi)
 }
@@ -48,7 +128,7 @@ func (x *LoginRequest) String() string {
 func (*LoginRequest) ProtoMessage() {}
 
 func (x *LoginRequest) ProtoReflect() protoreflect.Message {
-	mi := &file_v1_ApiService_proto_msgTypes[0]
+	mi := &file_v1_ApiService_proto_msgTypes[2]
 	if x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -61,7 +141,7 @@ func (x *LoginRequest) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use LoginRequest.ProtoReflect.Descriptor instead.
 func (*LoginRequest) Descriptor() ([]byte, []int) {
-	return file_v1_ApiService_proto_rawDescGZIP(), []int{0}
+	return file_v1_ApiService_proto_rawDescGZIP(), []int{2}
 }
 
 func (x *LoginRequest) GetTelegramId() int64 {
@@ -115,7 +195,7 @@ type LoginResponse struct {
 
 func (x *LoginResponse) Reset() {
 	*x = LoginResponse{}
-	mi := &file_v1_ApiService_proto_msgTypes[1]
+	mi := &file_v1_ApiService_proto_msgTypes[3]
 	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 	ms.StoreMessageInfo(mi)
 }
@@ -127,7 +207,7 @@ func (x *LoginResponse) String() string {
 func (*LoginResponse) ProtoMessage() {}
 
 func (x *LoginResponse) ProtoReflect() protoreflect.Message {
-	mi := &file_v1_ApiService_proto_msgTypes[1]
+	mi := &file_v1_ApiService_proto_msgTypes[3]
 	if x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -140,7 +220,7 @@ func (x *LoginResponse) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use LoginResponse.ProtoReflect.Descriptor instead.
 func (*LoginResponse) Descriptor() ([]byte, []int) {
-	return file_v1_ApiService_proto_rawDescGZIP(), []int{1}
+	return file_v1_ApiService_proto_rawDescGZIP(), []int{3}
 }
 
 func (x *LoginResponse) GetToken() string {
@@ -159,7 +239,7 @@ type IsAdminRequest struct {
 
 func (x *IsAdminRequest) Reset() {
 	*x = IsAdminRequest{}
-	mi := &file_v1_ApiService_proto_msgTypes[2]
+	mi := &file_v1_ApiService_proto_msgTypes[4]
 	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 	ms.StoreMessageInfo(mi)
 }
@@ -171,7 +251,7 @@ func (x *IsAdminRequest) String() string {
 func (*IsAdminRequest) ProtoMessage() {}
 
 func (x *IsAdminRequest) ProtoReflect() protoreflect.Message {
-	mi := &file_v1_ApiService_proto_msgTypes[2]
+	mi := &file_v1_ApiService_proto_msgTypes[4]
 	if x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -184,7 +264,7 @@ func (x *IsAdminRequest) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use IsAdminRequest.ProtoReflect.Descriptor instead.
 func (*IsAdminRequest) Descriptor() ([]byte, []int) {
-	return file_v1_ApiService_proto_rawDescGZIP(), []int{2}
+	return file_v1_ApiService_proto_rawDescGZIP(), []int{4}
 }
 
 func (x *IsAdminRequest) GetTelegramId() int64 {
@@ -203,7 +283,7 @@ type IsAdminResponse struct {
 
 func (x *IsAdminResponse) Reset() {
 	*x = IsAdminResponse{}
-	mi := &file_v1_ApiService_proto_msgTypes[3]
+	mi := &file_v1_ApiService_proto_msgTypes[5]
 	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 	ms.StoreMessageInfo(mi)
 }
@@ -215,7 +295,7 @@ func (x *IsAdminResponse) String() string {
 func (*IsAdminResponse) ProtoMessage() {}
 
 func (x *IsAdminResponse) ProtoReflect() protoreflect.Message {
-	mi := &file_v1_ApiService_proto_msgTypes[3]
+	mi := &file_v1_ApiService_proto_msgTypes[5]
 	if x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -228,7 +308,7 @@ func (x *IsAdminResponse) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use IsAdminResponse.ProtoReflect.Descriptor instead.
 func (*IsAdminResponse) Descriptor() ([]byte, []int) {
-	return file_v1_ApiService_proto_rawDescGZIP(), []int{3}
+	return file_v1_ApiService_proto_rawDescGZIP(), []int{5}
 }
 
 func (x *IsAdminResponse) GetIsAdmin() bool {
@@ -242,7 +322,10 @@ var File_v1_ApiService_proto protoreflect.FileDescriptor
 
 const file_v1_ApiService_proto_rawDesc = "" +
 	"\n" +
-	"\x13v1/ApiService.proto\x12\x06api.v1\x1a\x1cgoogle/api/annotations.proto\"\xb9\x01\n" +
+	"\x13v1/ApiService.proto\x12\x06api.v1\x1a\x1cgoogle/api/annotations.proto\"I\n" +
+	"\x1aSetPriorityChannelsRequest\x12+\n" +
+	"\x11priority_channels\x18\x01 \x03(\tR\x10priorityChannels\"\x1d\n" +
+	"\x1bSetPriorityChannelsResponse\"\xb9\x01\n" +
 	"\fLoginRequest\x12\x1f\n" +
 	"\vtelegram_id\x18\x01 \x01(\x03R\n" +
 	"telegramId\x12\x1a\n" +
@@ -258,11 +341,12 @@ const file_v1_ApiService_proto_rawDesc = "" +
 	"\vtelegram_id\x18\x01 \x01(\x03R\n" +
 	"telegramId\",\n" +
 	"\x0fIsAdminResponse\x12\x19\n" +
-	"\bis_admin\x18\x01 \x01(\bR\aisAdmin2\xad\x01\n" +
+	"\bis_admin\x18\x01 \x01(\bR\aisAdmin2\xb4\x02\n" +
 	"\n" +
 	"ApiService\x12J\n" +
 	"\x05Login\x12\x14.api.v1.LoginRequest\x1a\x15.api.v1.LoginResponse\"\x14\x82\xd3\xe4\x93\x02\x0e:\x01*\"\t/v1/login\x12S\n" +
-	"\aIsAdmin\x12\x16.api.v1.IsAdminRequest\x1a\x17.api.v1.IsAdminResponse\"\x17\x82\xd3\xe4\x93\x02\x11:\x01*\"\f/v1/is_adminB\x13Z\x11api/v1/ApiServiceb\x06proto3"
+	"\aIsAdmin\x12\x16.api.v1.IsAdminRequest\x1a\x17.api.v1.IsAdminResponse\"\x17\x82\xd3\xe4\x93\x02\x11:\x01*\"\f/v1/is_admin\x12\x84\x01\n" +
+	"\x13SetPriorityChannels\x12\".api.v1.SetPriorityChannelsRequest\x1a#.api.v1.SetPriorityChannelsResponse\"$\x82\xd3\xe4\x93\x02\x1e:\x01*\"\x19/v1/set_priority_channelsB\x13Z\x11api/v1/ApiServiceb\x06proto3"
 
 var (
 	file_v1_ApiService_proto_rawDescOnce sync.Once
@@ -276,20 +360,24 @@ func file_v1_ApiService_proto_rawDescGZIP() []byte {
 	return file_v1_ApiService_proto_rawDescData
 }
 
-var file_v1_ApiService_proto_msgTypes = make([]protoimpl.MessageInfo, 4)
+var file_v1_ApiService_proto_msgTypes = make([]protoimpl.MessageInfo, 6)
 var file_v1_ApiService_proto_goTypes = []any{
-	(*LoginRequest)(nil),    // 0: api.v1.LoginRequest
-	(*LoginResponse)(nil),   // 1: api.v1.LoginResponse
-	(*IsAdminRequest)(nil),  // 2: api.v1.IsAdminRequest
-	(*IsAdminResponse)(nil), // 3: api.v1.IsAdminResponse
+	(*SetPriorityChannelsRequest)(nil),  // 0: api.v1.SetPriorityChannelsRequest
+	(*SetPriorityChannelsResponse)(nil), // 1: api.v1.SetPriorityChannelsResponse
+	(*LoginRequest)(nil),                // 2: api.v1.LoginRequest
+	(*LoginResponse)(nil),               // 3: api.v1.LoginResponse
+	(*IsAdminRequest)(nil),              // 4: api.v1.IsAdminRequest
+	(*IsAdminResponse)(nil),             // 5: api.v1.IsAdminResponse
 }
 var file_v1_ApiService_proto_depIdxs = []int32{
-	0, // 0: api.v1.ApiService.Login:input_type -> api.v1.LoginRequest
-	2, // 1: api.v1.ApiService.IsAdmin:input_type -> api.v1.IsAdminRequest
-	1, // 2: api.v1.ApiService.Login:output_type -> api.v1.LoginResponse
-	3, // 3: api.v1.ApiService.IsAdmin:output_type -> api.v1.IsAdminResponse
-	2, // [2:4] is the sub-list for method output_type
-	0, // [0:2] is the sub-list for method input_type
+	2, // 0: api.v1.ApiService.Login:input_type -> api.v1.LoginRequest
+	4, // 1: api.v1.ApiService.IsAdmin:input_type -> api.v1.IsAdminRequest
+	0, // 2: api.v1.ApiService.SetPriorityChannels:input_type -> api.v1.SetPriorityChannelsRequest
+	3, // 3: api.v1.ApiService.Login:output_type -> api.v1.LoginResponse
+	5, // 4: api.v1.ApiService.IsAdmin:output_type -> api.v1.IsAdminResponse
+	1, // 5: api.v1.ApiService.SetPriorityChannels:output_type -> api.v1.SetPriorityChannelsResponse
+	3, // [3:6] is the sub-list for method output_type
+	0, // [0:3] is the sub-list for method input_type
 	0, // [0:0] is the sub-list for extension type_name
 	0, // [0:0] is the sub-list for extension extendee
 	0, // [0:0] is the sub-list for field type_name
@@ -306,7 +394,7 @@ func file_v1_ApiService_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: unsafe.Slice(unsafe.StringData(file_v1_ApiService_proto_rawDesc), len(file_v1_ApiService_proto_rawDesc)),
 			NumEnums:      0,
-			NumMessages:   4,
+			NumMessages:   6,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
