# backend/Api_Gateway/api/gen/v1/ApiService_grpc.pb.go
@@ -19,8 +19,9 @@ import (
 const _ = grpc.SupportPackageIsVersion9
 
 const (
-	ApiService_Login_FullMethodName   = "/api.v1.ApiService/Login"
-	ApiService_IsAdmin_FullMethodName = "/api.v1.ApiService/IsAdmin"
+	ApiService_Login_FullMethodName               = "/api.v1.ApiService/Login"
+	ApiService_IsAdmin_FullMethodName             = "/api.v1.ApiService/IsAdmin"
+	ApiService_SetPriorityChannels_FullMethodName = "/api.v1.ApiService/SetPriorityChannels"
 )
 
 // ApiServiceClient is the client API for ApiService service.
@@ -29,6 +30,7 @@ const (
 type ApiServiceClient interface {
 	Login(ctx context.Context, in *LoginRequest, opts ...grpc.CallOption) (*LoginResponse, error)
 	IsAdmin(ctx context.Context, in *IsAdminRequest, opts ...grpc.CallOption) (*IsAdminResponse, error)
+	SetPriorityChannels(ctx context.Context, in *SetPriorityChannelsRequest, opts ...grpc.CallOption) (*SetPriorityChannelsResponse, error)
 }
 
 type apiServiceClient struct {
@@ -59,12 +61,23 @@ func (c *apiServiceClient) IsAdmin(ctx context.Context, in *IsAdminRequest, opts
 	return out, nil
 }
 
+func (c *apiServiceClient) SetPriorityChannels(ctx context.Context, in *SetPriorityChannelsRequest, opts ...grpc.CallOption) (*SetPriorityChannelsResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(SetPriorityChannelsResponse)
+	err := c.cc.Invoke(ctx, ApiService_SetPriorityChannels_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // ApiServiceServer is the server API for ApiService service.
 // All implementations should embed UnimplementedApiServiceServer
 // for forward compatibility.
 type ApiServiceServer interface {
 	Login(context.Context, *LoginRequest) (*LoginResponse, error)
 	IsAdmin(context.Context, *IsAdminRequest) (*IsAdminResponse, error)
+	SetPriorityChannels(context.Context, *SetPriorityChannelsRequest) (*SetPriorityChannelsResponse, error)
 }
 
 // UnimplementedApiServiceServer should be embedded to have
@@ -79,6 +92,9 @@ func (UnimplementedApiServiceServer) Login(context.Context, *LoginRequest) (*Log
 }
 func (UnimplementedApiServiceServer) IsAdmin(context.Context, *IsAdminRequest) (*IsAdminResponse, error) {
 	return nil, status.Error(codes.Unimplemented, "method IsAdmin not implemented")
+}
+func (UnimplementedApiServiceServer) SetPriorityChannels(context.Context, *SetPriorityChannelsRequest) (*SetPriorityChannelsResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method SetPriorityChannels not implemented")
 }
 func (UnimplementedApiServiceServer) testEmbeddedByValue() {}
 
@@ -136,6 +152,24 @@ func _ApiService_IsAdmin_Handler(srv interface{}, ctx context.Context, dec func(
 	return interceptor(ctx, in, info, handler)
 }
 
+func _ApiService_SetPriorityChannels_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(SetPriorityChannelsRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ApiServiceServer).SetPriorityChannels(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ApiService_SetPriorityChannels_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ApiServiceServer).SetPriorityChannels(ctx, req.(*SetPriorityChannelsRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // ApiService_ServiceDesc is the grpc.ServiceDesc for ApiService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -150,6 +184,10 @@ var ApiService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "IsAdmin",
 			Handler:    _ApiService_IsAdmin_Handler,
+		},
+		{
+			MethodName: "SetPriorityChannels",
+			Handler:    _ApiService_SetPriorityChannels_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
